--- a/bootstrap-n-column.less
+++ b/bootstrap-n-column.less
@@ -9,80 +9,95 @@
 
 .col(@numCols, @colIdx){
 	width: (100% / @numCols) * @colIdx;
-    float: left !important;	
+    float: left;	
 }
 .col-offset(@numCols, @colIdx){
 	margin-left: (100% / @numCols) * @colIdx;
 }
 .col-push(@numCols, @colIdx){
-		left: (100% / @numCols) * @colIdx;
+	left: (100% / @numCols) * @colIdx;
 }
 .col-pull(@numCols, @colIdx){
-    	right: (100% / @numCols) * @colIdx;
+	right: (100% / @numCols) * @colIdx;
 }
 
-.col-set(@numCols)
-{
+.col-set(@numCols) {
 	.col-@{numCols} {
-	    .cols (@colIdx) when (@colIdx <= @numCols) {
-	    	.col-xs-@{colIdx} {
+	    .cols-xs (@colIdx) when (@colIdx <= @numCols) {
+	    	>.col-xs-@{colIdx} {
 	    		.col(@numCols, @colIdx);
 	    	}
-	    	.col-xs-offset-@{colIdx} {
+	    	>.col-xs-offset-@{colIdx} {
 	    		.col-offset(@numCols, @colIdx);
 	    	}
-    		.col-xs-push-@{colIdx} {
+			>.col-xs-push-@{colIdx} {
+				.col-push(@numCols, @colIdx);
+			}
+			>.col-xs-pull-@{colIdx} {
+				.col-pull(@numCols, @colIdx);
+			}
+		}
+		.cols-sm (@colIdx) when (@colIdx <= @numCols) {
+		   	>.col-sm-@{colIdx} {
+    			.col(@numCols, @colIdx);
+    		}
+    		>.col-sm-offset-@{colIdx} {
+    			.col-offset(@numCols, @colIdx);
+    		}
+    		>.col-sm-push-@{colIdx} {
     			.col-push(@numCols, @colIdx);
     		}
-    		.col-xs-pull-@{colIdx} {
+    		>.col-sm-pull-@{colIdx} {
+    			.col-pull(@numCols, @colIdx);
+    		}					
+			.cols-sm(@colIdx + 1);
+		}
+		.cols-md (@colIdx) when (@colIdx <= @numCols) {
+			>.col-md-@{colIdx} {
+				.col(@numCols, @colIdx);
+    		}
+    		>.col-md-offset-@{colIdx} {
+    			.col-offset(@numCols, @colIdx);
+    		}
+    		>.col-md-push-@{colIdx} {
+    			.col-push(@numCols, @colIdx);
+    		}
+    		>.col-md-pull-@{colIdx} {
+    			.col-pull(@numCols, @colIdx);
+    		}	
+			
+			.cols-md(@colIdx + 1);
+		}
+		.cols-lg (@colIdx) when (@colIdx <= @numCols) {
+			
+			>.col-lg-@{colIdx} {
+    			.col(@numCols, @colIdx);
+    		}
+    		>.col-lg-offset-@{colIdx} {
+    			.col-offset(@numCols, @colIdx);
+    		}
+    		>.col-lg-push-@{colIdx} {
+    			.col-push(@numCols, @colIdx);
+    		}
+    		>.col-lg-pull-@{colIdx} {
     			.col-pull(@numCols, @colIdx);
     		}
-	    	@media (min-width: @screen-sm-min) {
-	    		.col-sm-@{colIdx} {
-	    			.col(@numCols, @colIdx);
-	    		}
-	    		.col-sm-offset-@{colIdx} {
-	    			.col-offset(@numCols, @colIdx);
-	    		}
-	    		.col-sm-push-@{colIdx} {
-	    			.col-push(@numCols, @colIdx);
-	    		}
-	    		.col-sm-pull-@{colIdx} {
-	    			.col-pull(@numCols, @colIdx);
-	    		}
-			}
-		@media (min-width: @screen-md-min) {
-			.col-md-@{colIdx} {
-    				.col(@numCols, @colIdx);
-	    		}
-	    		.col-md-offset-@{colIdx} {
-	    			.col-offset(@numCols, @colIdx);
-	    		}
-	    		.col-md-push-@{colIdx} {
-	    			.col-push(@numCols, @colIdx);
-	    		}
-	    		.col-md-pull-@{colIdx} {
-	    			.col-pull(@numCols, @colIdx);
-	    		}	
-		}
-		@media (min-width: @screen-lg-min) {
-			.col-lg-@{colIdx} {
-	    			.col(@numCols, @colIdx);
-	    		}
-	    		.col-lg-offset-@{colIdx} {
-	    			.col-offset(@numCols, @colIdx);
-	    		}
-	    		.col-lg-push-@{colIdx} {
-	    			.col-push(@numCols, @colIdx);
-	    		}
-	    		.col-lg-pull-@{colIdx} {
-	    			.col-pull(@numCols, @colIdx);
-	    		}
+				
+	        .cols-lg(@colIdx+1);
 		}
 
-	        .cols(@colIdx+1);
-	    }
-	    .cols(1);
+		.cols-xs(1);
+		@media (min-width: @screen-sm-min) {
+			.cols-sm(1);	    		
+    	}
+
+		@media (min-width: @screen-md-min) {
+			.cols-md(1);
+		}
+
+		@media (min-width: @screen-lg-min) {
+			.cols-lg(1);
+		}
 	}
 }
 
